--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Slab:400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
-
+@import url('https://fonts.googleapis.com/css?family=Bitter:400,400i,700');
 
 .site-title, .site-nav-logo {
     font-family: 'Merriweather', serif;
