--- a/index.hbs
+++ b/index.hbs
@@ -26,6 +26,10 @@ into the {body} of the default.hbs template --}}
         <div class="post-feed">
             {{#foreach posts}}
 
+                {{#has number="4"}}
+                   {{> "have-news"}}
+                {{/has}}
+
                 {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
                 {{> "post-card"}}
 
