--- a/page.hbs
+++ b/page.hbs
@@ -3,11 +3,26 @@
 into the {body} of the default.hbs template --}}
 
 {{!-- The big featured header, it uses blog cover image as a BG if available --}}
-<header class="site-header outer">
+<header class="site-header outer {{#if @blog.cover_image}}" style="background-image: url({{@blog.cover_image}}){{else}}no-cover{{/if}}">
     <div class="inner">
-        {{> "site-nav"}}
+        <div class="site-header-content">
+            <h1 class="site-title">
+                {{#if @blog.logo}}
+                    <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
+                {{else}}
+                    {{@blog.title}}
+                {{/if}}
+            </h1>
+            <h2 class="site-description">
+                {{#if excerpt}}
+                    {{excerpt}}
+                {{/if}}
+            </h2>
+        </div>
     </div>
 </header>
+{{> "site-nav"}}
+
 
 {{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
@@ -15,16 +30,11 @@ into the {body} of the default.hbs template --}}
 <main id="site-main" class="site-main outer">
     <div class="inner">
 
-        <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
+        <article class="post-full {{post_class}} no-image">
 
             <header class="post-full-header">
                 <h1 class="post-full-title">{{title}}</h1>
             </header>
-
-            {{#if feature_image}}
-            <figure class="post-full-image" style="background-image: url({{feature_image}})">
-            </figure>
-            {{/if}}
 
             <section class="post-full-content">
                 <div class="post-content">
