--- a/index.hbs
+++ b/index.hbs
@@ -3,6 +3,7 @@
 into the {body} of the default.hbs template --}}
 
 {{!-- The big featured header, it uses blog cover image as a BG if available --}}
+<a class="header-linky" href="/">
 <header class="site-header outer {{#if @blog.cover_image}}" style="background-image: url({{@blog.cover_image}}){{else}}no-cover{{/if}}">
     <div class="inner">
         <div class="site-header-content">
@@ -17,6 +18,7 @@ into the {body} of the default.hbs template --}}
         </div>
     </div>
 </header>
+</a>
 {{> "site-nav"}}
 {{!-- The main content area --}}
 <main id="site-main" class="site-main outer">
