--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -16,7 +16,7 @@
             {{/if}}
         </div>
         {{#if @labs.subscribers}}
-            <a class="subscribe-button" href="#subscribe">Subscribe</a>
+            <a class="subscribe-button" href="#subscribe">Volg</a>
         {{else}}
             <a class="rss-button" href="https://feedly.com/i/subscription/feed/{{@blog.url}}/rss/" title="RSS" target="_blank" rel="noopener">{{> "icons/rss"}}</a>
         {{/if}}
