--- a/default.hbs
+++ b/default.hbs
@@ -52,9 +52,9 @@
             {{#if @blog.logo}}
                 <img class="subscribe-overlay-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
             {{/if}}
-            <h1 class="subscribe-overlay-title">Subscribe to {{@blog.title}}</h1>
-            <p class="subscribe-overlay-description">Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox</p>
-            {{subscribe_form placeholder="youremail@example.com"}}
+            <h1 class="subscribe-overlay-title">Volg {{@blog.title}}</h1>
+            <p class="subscribe-overlay-description">Krijg het laatste nieuws van {{@blog.title}} rechtstreeks in je mailbox!</p>
+            {{subscribe_form placeholder="mijnemail@telenet.be"}}
         </div>
     </div>
     {{/if}}
