--- a/partials/floating-header.hbs
+++ b/partials/floating-header.hbs
@@ -1,4 +1,4 @@
-<div class="floating-header">
+<div class="floating-header" href="/">
     <div class="floating-header-logo">
         <a href="{{@blog.url}}">
             {{#if @blog.icon}}
