--- a/partials/callout.hbs
+++ b/partials/callout.hbs
@@ -1,13 +1,22 @@
-<div class="post-card" style="flex: 1 1 2000px; min-height: 125px; background-color: #FFF;">
-	    <div class="post-card-content">
-        <span class="post-card-content-link">
+<article class="post-card post">
+    <a class="post-card-image-link" href="https://www.patreon.com/deBrugseStem" target="_blank">
+        <div class="post-card-image" style="background-image: url(/content/images/2018/11/Bruges_Canal_Panorama-1.jpg)"></div>
+    </a>
+    <div class="post-card-content">
+        <a class="post-card-content-link" href="https://www.patreon.com/deBrugseStem" target="_blank">
             <header class="post-card-header">
-                <h2 class="post-card-title" style="color: #F15854;">Stem nu op <span style="font-weight: bold; font-family: Merriweather,serif;">De Brugse Stem</span> voor de Best Of Brugge awards!</h2>
+                <span class="post-card-tags">Steun De Brugse Stem</span>
+                <h2 class="post-card-title">Steun De Brugse Stem op Patreon</h2>
             </header>
-             <section class="post-card-excerpt">
-                Geef ons jouw stem via <a href="https://www.villabota.be/bob" target="_blank">de website van Villa Bota</a> en win helemaal niks.
+            <section class="post-card-excerpt">
+                Je kan De Brugse Stem ook via Patreon steunen met een kleine bijdrage. Alle bijdragen gaan integraal naar het onderhouden van de website.
             </section>
-        </span>
-       
+        </a>
+        <footer class="post-card-meta">
+            <ul class="author-list">
+            
+            </ul>
+            <span class="reading-time">één dag geleden</span>
+        </footer>
     </div>
-</div>
+</article>
