--- a/partials/floating-header.hbs
+++ b/partials/floating-header.hbs
@@ -4,13 +4,13 @@
             {{#if @blog.icon}}
                 <img src="{{@blog.icon}}" alt="{{@blog.title}} icon" />
             {{/if}}
-            <span>{{@blog.title}}</span>
+            <span style="color: #2b80bf;">Terug naar {{@blog.title}}</span>
         </a>
     </div>
     <span class="floating-header-divider">&mdash;</span>
     <div class="floating-header-title">{{title}}</div>
     <div class="floating-header-share">
-        <div class="floating-header-share-label">Share this {{> "icons/point"}}</div>
+        <div class="floating-header-share-label">Delen {{> "icons/point"}}</div>
         <a class="floating-header-share-tw" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
             onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
             {{> "icons/twitter"}}
