--- a/partials/floating-header.hbs
+++ b/partials/floating-header.hbs
@@ -1,6 +1,6 @@
 <div class="floating-header" href="/">
     <div class="floating-header-logo">
-        <a href="{{@blog.url}}">
+        <a href="/">
             {{#if @blog.icon}}
                 <img src="{{@blog.icon}}" alt="{{@blog.title}} icon" />
             {{/if}}
