--- a/default.hbs
+++ b/default.hbs
@@ -34,7 +34,7 @@
                 <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
                 <nav class="site-footer-nav">
                     
-                    <a href="/contacteer-ons/">Contact</a>
+                    <a href="/over-de-brugse-stem/">Over DBS</a>
                     <a href="{{@blog.url}}">Vers van de Pers</a>
                     {{#if @blog.facebook}}<a href="{{facebook_url @blog.facebook}}" target="_blank" rel="noopener">Facebook</a>{{/if}}
                     {{#if @blog.twitter}}<a href="{{twitter_url @blog.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
