--- a/partials/ad.hbs
+++ b/partials/ad.hbs
@@ -1,5 +1,5 @@
 <article class="post-card post">
 	<a href="http://www.redzebralive.be" target="_blank">
-	   <img src="/content/images/2018/12/48404263_2315765465360640_5564331690488233984_n--1-.jpg">
+	   <img style="display: block; margin-left: auto; margin-right: auto;" src="/content/images/2018/12/48404263_2315765465360640_5564331690488233984_n--1-.jpg">
 	</a>
 </article>
