--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -30,21 +30,22 @@
             </section>
         </a>
         <footer class="post-card-meta">
+            {{#author}}
             <ul class="author-list">
-            
-            {{#has tag="#highlight"}}
                 <li class="author-list-item">
                     <div class="author-name-tooltip">
-                        Populair Artikel
+                        {{name}}
                     </div>
-                    <div class="author-profile-image" style="background-color: #fff; color: #FF9800;" alt="Populair Artikel">
-                    <i class="material-icons">
-                    whatshot
-                    </i>
-                    </div>
+                     {{#if profile_image}}
+                        <a href="{{url}}" class="static-avatar">
+                            <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
+                        </a>
+                    {{else}}
+                        <a href="{{url}}" class="static-avatar author-profile-image">{{> "icons/avatar"}}</a>
+                    {{/if}}
                 </li>
-            {{/has }}
             </ul>
+            {{/author}}
             <span class="reading-time">{{date published_at timeago='true'}}</span>
         </footer>
     </div>
