--- a/post.hbs
+++ b/post.hbs
@@ -34,6 +34,7 @@ into the {body} of the default.hbs template --}}
                         <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
                     {{/primary_tag}}
                 </section>
+                <section>Door {{author}}</section>
                 <h1 class="post-full-title">{{title}}</h1>
             </header>
 
